fix therecipe home page banner alignment and move reference images to respective folders

--- a/therecipe/style.css
+++ b/therecipe/style.css
@@ -188,7 +188,7 @@
     color: var(--clr-gray);
 }
 .header .container{
-  max-width: 138rem;
+  max-width: 118rem;
 }
 .header .header__wrapper{
   display: flex;
@@ -261,7 +261,7 @@
   max-width: 50rem;
 }
 .recipeBanner .recipeBanner__wrapper .recipeBanner__right{
-  max-width: 70rem;
+  max-width: 52rem;
 }
 /* RECIPE BANNER RESPONSIVE */
 @media screen and (max-width: 850px){
@@ -647,23 +647,33 @@
 }
 .recipeIntro__bottom{
   background-color: var(--clr-light);
-  content: " ";
-  /* width: 100%; */
-  height: 30rem;
+  height: 5rem;
 }
 .recipeIntro__wrapper{
   padding-bottom: 40rem;
 }
 .recipeIntro__title, .recipeIntro__details{
-  display:flex;
+  display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 2rem 0;
+  margin: 0 10rem;
+}
+.recipeIntro__title{
+  align-items: flex-end;
+}
+.recipeIntro__title h2{
+  font-size: 3.5rem;
+  font-weight: 700;
+  font-family: var(--font-secondary);
+  width: 40rem;
+  line-height: 5rem;
 }
 .recipeIntro__details{
+  align-items: center;
   border: none;
   border-top: 0.1rem solid var(--clr-gray);
   border-bottom: 0.1rem solid var(--clr-gray);
+  margin-bottom: 2.5rem;
 }
 .recipeIntro__img_directions{
   display: flex;
